# CareMemo

./: .gitignore  README.md  main.py  pyproject.toml  ruff.toml  site-package-check.py
src/: demo.html  demo.ipynb
src/classes/: Memory.py  MemoryOperation.py
src/data/: memory_eval_dataset.csv
src/function/: answer_generation.py  mem_proc.py  vector_store.py
src/test/: embe_contra_detect.py  test_memory_operation.py
src/utils/: GLOBAL.py  PROMPT.py  contradictory_detect.py  embedding.py  llm_manager.py
