[project]
name = "carememo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.4"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "langchain>=0.3.24",
    "langchain-core>=0.3.56",
    "langchain-deepseek>=0.1.3",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.15",
    "langchain-postgres>=0.0.14",
    "numpy>=1.26.4",
    "ollama>=0.4.8",
    "pandas>=2.2.3",
    "pgvector>=0.3.6",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "torch>=2.7.0",
    "uuid>=1.30",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
